Use correct method to get the Path from a jar on windows ()
* Use correct method to get the Path from a jar on windows

* Format code

Co-authored-by: Agent Smith <103414894+neo4jagentsmith[bot]@users.noreply.github.com>